--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "tienda-react",
+  "homepage": "https://drtx2.github.io/copying-amazon",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "gh-pages": "^6.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0"
